objects/LLC_BI__Deposit_Distribution__c.object
<CustomObject>
    <description>The Deposit Distribution Object is used to track details of distributions from deposits within nCino</description>
    <fields>
        <fullName>LLC_BI__Additional_Federal_Withholding_Pct__c</fullName>
        <description>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from the distribution.</description>
        <inlineHelpText>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from the distribution.</inlineHelpText>
        <label>Additional Federal Withholding Pct</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Federal_Withholdings__c</fullName>
        <description>Where an initial 10% federal income tax withholding is already presumed to apply to the transaction, this is the ADDITIONAL discretionary dollar amount, if any, over and above the baseline 10%, that the IRA plan owner or distribution recipient elects to have withheld from the distribution.</description>
        <inlineHelpText>The ADDITIONAL discretionary dollar amount of federal withholdings, over and above the baseline 10%, to the IRA plan.</inlineHelpText>
        <label>Additional Federal Withholdings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Distribution_Type__c</fullName>
        <description>Specifies the type of distribution for a Coverdell Education Savings Account (CESA).</description>
        <inlineHelpText>Specifies the type of distribution for a Coverdell Education Savings Account (CESA).</inlineHelpText>
        <label>CESA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributions - Non Transfer</fullName>
                </value>
                <value>
                    <fullName>Distributions - Transfer to CESA of same Designated Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Distributions - Transfer to CESA of new qualified designated beneficiary</fullName>
                </value>
                <value>
                    <fullName>Distributions - Transfer to former spouse&apos;s CESA due to divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in year after excess contribution but by May 31</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution after May 31 of the tax year after excess contribution</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Delivery_Payment_Description__c</fullName>
        <description>This is a description of how the individual should be referenced on the check or certificate registration.</description>
        <inlineHelpText>This is a description of how the individual should be referenced on the check or certificate registration.</inlineHelpText>
        <label>Delivery Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Delivery_Payment_Options__c</fullName>
        <description>Description of possible medium(s) for the payment/transfer requested.</description>
        <inlineHelpText>Description of possible medium(s) for the payment/transfer requested.</inlineHelpText>
        <label>Delivery Payment Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check payable to or certificate registration in the name of</fullName>
                </value>
                <value>
                    <fullName>Check payable to</fullName>
                </value>
                <value>
                    <fullName>Check or electronic fund transfer payable to</fullName>
                </value>
                <value>
                    <fullName>Certificate registration in the name of</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the request associated to the distribution</description>
        <label>Deposit Request</label>
        <referenceTo>LLC_BI__Deposit_Request__c</referenceTo>
        <relationshipLabel>Deposit Distributions</relationshipLabel>
        <relationshipName>Deposit_Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <description>A lookup to the deposit associated to the distribution</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Deposit Distributions</relationshipLabel>
        <relationshipName>Deposit_Distributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Administration_Fee__c</fullName>
        <description>The amount of the administrative fees charged in connection with the distribution.</description>
        <inlineHelpText>The amount of the administrative fees charged in connection with the distribution.</inlineHelpText>
        <label>Distribution Administration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Amount__c</fullName>
        <description>The amount of the total distribution.</description>
        <inlineHelpText>The amount of the total distribution.</inlineHelpText>
        <label>Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Basis_Amount__c</fullName>
        <description>For Coverdell Education Savings Account (CESA) distributions this is the basis amount for the distribution.</description>
        <inlineHelpText>For Coverdell Education Savings Account (CESA) distributions this is the basis amount for the distribution.</inlineHelpText>
        <label>Distribution Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Earnings_Amount__c</fullName>
        <description>For Coverdell Education Savings Account (CESA) distributions this is the earnings for the distribution.</description>
        <inlineHelpText>For Coverdell Education Savings Account (CESA) distributions this is the earnings for the distribution.</inlineHelpText>
        <label>Distribution Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Payment_Method__c</fullName>
        <description>Specifies the payment method applicable to the distribution.</description>
        <inlineHelpText>Specifies the payment method applicable to the distribution.</inlineHelpText>
        <label>Distribution Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail Check</fullName>
                </value>
                <value>
                    <fullName>Deposit into account with this financial organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Subtotal__c</fullName>
        <description>The externally calculated Subtotal dollar amount to print in the payment detail table on the distribution or election form.</description>
        <inlineHelpText>The externally calculated Subtotal dollar amount to print in the payment detail table on the distribution or election form.</inlineHelpText>
        <label>Distribution Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Election_Of_Payment_Attached_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true an election of payment already exists and a copy of the prior election is attached.</description>
        <inlineHelpText>If true an election of payment already exists and a copy of the prior election is attached.</inlineHelpText>
        <label>Election of Payment Attached Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Election_Of_Payment_Default_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the election of payment type selected is the default election that was made after the election deadline has passed.</description>
        <inlineHelpText>If true the election of payment type selected is the default election that was made after the election deadline has passed.</inlineHelpText>
        <label>Election of Payment Default Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Election_Of_Payment_Type__c</fullName>
        <description>Specifies the type of payment elected by the beneficiary or in the case of a beneficiary IRA the type of payment elected by the owner.</description>
        <inlineHelpText>Specifies the type of payment elected by the beneficiary or in the case of a beneficiary IRA the type of payment elected by the owner.</inlineHelpText>
        <label>Election of Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Treat As Own</fullName>
                </value>
                <value>
                    <fullName>Five Year Rule</fullName>
                </value>
                <value>
                    <fullName>Single Life Expectancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Excess_Attributable_Earnings__c</fullName>
        <description>The amount of the earnings attributable to excess contribution. This only applies to distributions related to excess or recharacterized contributions.</description>
        <inlineHelpText>The amount of the earnings attributable to excess contribution. This only applies to distributions related to excess or recharacterized contributions.</inlineHelpText>
        <label>Excess Attributable Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excess_Contribution_Amount__c</fullName>
        <description>The amount of excess contribution related to the distribution.</description>
        <inlineHelpText>The amount of excess contribution related to the distribution.</inlineHelpText>
        <label>Excess Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excess_Contribution_Tax_Year__c</fullName>
        <description>The tax year for which the excess contribution was made. This only applies to distributions related to excess or recharacterized contributions.</description>
        <inlineHelpText>The tax year for which the excess contribution was made. This only applies to distributions related to excess or recharacterized contributions.</inlineHelpText>
        <label>Excess Contribution Tax Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Federal_Withholding_Amount__c</fullName>
        <description>The net, externally-calculated dollar amount of Federal Withholding to print on the Distribution or Election form, including the standard 10%, as applicable, applied to the distribution Subtotal, plus any discretionary additional dollar amount or percentage as applied or optional additional dollar amount.</description>
        <inlineHelpText>The net dollar amount of Federal Withholding, including the standard 10% applied to the distribution Subtotal</inlineHelpText>
        <label>Federal Withholding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HSA_Distribution_Type__c</fullName>
        <description>Specifies the type of distribution for a Health Savings Account (HSA).</description>
        <inlineHelpText>Specifies the type of distribution for a Health Savings Account (HSA).</inlineHelpText>
        <label>HSA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Death - Estate Beneficiary - Distribution is in Year of Death</fullName>
                </value>
                <value>
                    <fullName>Death - Estate Beneficiary - Distribution is After Year of Death</fullName>
                </value>
                <value>
                    <fullName>Death - Other Beneficiary - Distribution is in Year of Death</fullName>
                </value>
                <value>
                    <fullName>Death - Other Beneficiary - Distribution is After Year of Death</fullName>
                </value>
                <value>
                    <fullName>Transfer to my HSA</fullName>
                </value>
                <value>
                    <fullName>Transfer to spouse&apos;s HSA due to death</fullName>
                </value>
                <value>
                    <fullName>Transfer to former spouse&apos;s HSA due to divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution by my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - after my tax-filing due date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Distribution_Date__c</fullName>
        <description>The date of the IRA distribution.</description>
        <inlineHelpText>The date of the IRA distribution.</inlineHelpText>
        <label>IRA Distribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Distribution_Type__c</fullName>
        <description>Specifies the type of distribution for a Traditional Beneficiary or Roth Beneficiary IRA.</description>
        <inlineHelpText>Specifies the type of distribution for a Traditional Beneficiary or Roth Beneficiary IRA.</inlineHelpText>
        <label>IRA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>IRS Levy</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - On or before my tax-filing due date in the same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - On or before my tax-filing due date in the year after excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution - After my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Recharacterization (Roth Beneficiary only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRS_Levy_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the distribution is related to an IRS levy. This is only applicable to Traditional IRAs SIMPLE IRAs and Health Savings Accounts (HSAs); the other types of IRA have a separate distribution type that would be used for IRS levies.</description>
        <inlineHelpText>If true the distribution is related to an IRS levy. This is only applicable to Traditional IRAs SIMPLE IRAs and Health Savings Accounts (HSAs); the other types of IRA have a separate distribution type that would be used for IRS levies.</inlineHelpText>
        <label>IRS Levy Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Local_Income_Tax_Percent__c</fullName>
        <description>Any additional percentage amount (not flat dollar amount) of local income taxes to be withheld from the distribution subtotal. Local taxes will not always apply but where applicable only one of the two data points for either the amount (entered under Txn/Deposit/IRAPlans/IRAPlan/LocalIncomeTaxAmount) or the percentage needs be passed.</description>
        <inlineHelpText>Any additional percentage amount of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
        <label>Local Income Tax Percent</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Local_Income_Taxes_Locality__c</fullName>
        <description>Specifies the locality (e.g., city) applicable to any additional dollar amount or percentage of local income taxes to be withheld from the distribution subtotal.</description>
        <inlineHelpText>Specifies the locality (e.g., city) applicable to any additional dollar amount or percentage of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
        <label>Local Income Taxes Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Local_Income_Taxes_Withheld__c</fullName>
        <description>Any additional dollar amount (not percentage) of local income taxes to be withheld from the distribution subtotal.</description>
        <inlineHelpText>Any additional dollar amount (not percentage) of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
        <label>Local Income Taxes Withheld</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Distribution_Amount__c</fullName>
        <description>The externally calculated, net dollar amount of the distribution to print in the payment detail table on the distribution or election form.</description>
        <inlineHelpText>The externally calculated, net dollar amount of the distribution to print in the payment detail table on the distribution or election form.</inlineHelpText>
        <label>Net Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Election_Of_Payment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the beneficiary is making a new election of payment. In the case of a formally established beneficiary IRA it is the owner making a new election of payment.</description>
        <inlineHelpText>If true the beneficiary is making a new election of payment. In the case of a formally established beneficiary IRA it is the owner making a new election of payment.</inlineHelpText>
        <label>New Election of Payment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Delivery_Instructions__c</fullName>
        <description>A description of any other delivery instructions regarding the payment.</description>
        <inlineHelpText>A description of any other delivery instructions regarding the payment.</inlineHelpText>
        <label>Other Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Delivery_Payment_Options__c</fullName>
        <description>User-defined description of possible medium(s) for the payment/transfer requested. (e.g., &apos;check or ACH transfer.&apos;)</description>
        <inlineHelpText>User-defined description of possible medium(s) for the payment/transfer requested. (e.g., &apos;check or ACH transfer.&apos;)</inlineHelpText>
        <label>Other Delivery Payment Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Distribution_Payment_Method__c</fullName>
        <description>A description of the other payment method type.</description>
        <inlineHelpText>A description of the other payment method type.</inlineHelpText>
        <label>Other Distribution Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Amount_Type__c</fullName>
        <description>Specifies the type of payment amount. NOTE: This amount when used in the context of a recharacterization includes the contribution amount plus earnings attributable.</description>
        <inlineHelpText>Specifies the type of payment amount. NOTE: This amount when used in the context of a recharacterization includes the contribution amount plus earnings attributable.</inlineHelpText>
        <label>Payment Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire balance or contribution amount</fullName>
                </value>
                <value>
                    <fullName>Portion of balance or contribution amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portion_Description__c</fullName>
        <description>Describes the portion of the account balance to be converted transferred or directly rolled over or in the case of a recharacterization the contribution amount plus earnings attributable to be recharacterized.</description>
        <inlineHelpText>Describes the portion of the account balance to be converted transferred or directly rolled over or in the case of a recharacterization the contribution amount plus earnings attributable to be recharacterized.</inlineHelpText>
        <label>Portion Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Payment_Type_Other__c</fullName>
        <description>Describes the other investment payment schedule and/or type</description>
        <inlineHelpText>Describes the other investment payment schedule and/or type</inlineHelpText>
        <label>Request Payment Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Payment_Type__c</fullName>
        <description>Specifies the investment payment schedule and type.</description>
        <inlineHelpText>Specifies the investment payment schedule and type.</inlineHelpText>
        <label>Request Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately liquidate investments and send cash</fullName>
                </value>
                <value>
                    <fullName>Liquidate specified investments</fullName>
                </value>
                <value>
                    <fullName>Send all investments in kind</fullName>
                </value>
                <value>
                    <fullName>Send assets at maturity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_IRA_Distribution_Type__c</fullName>
        <description>Specifies the type of distribution for a Roth IRA.</description>
        <inlineHelpText>Specifies the type of distribution for a Roth IRA.</inlineHelpText>
        <label>Roth IRA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Distribution from a Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Age 59 1/2 or Older</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Transfer to my Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Transfer to spouse&apos;s Roth IRA due to death</fullName>
                </value>
                <value>
                    <fullName>Transfer to former spouse&apos;s Roth IRA due to divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of prior tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of current tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Qualified Health Savings Account Funding Distribution (QHSAAFD)</fullName>
                </value>
                <value>
                    <fullName>IRS Levy</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in year after excess contribution, but by my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution after my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Transfer to beneficiary&apos;s Roth Beneficiary IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Income_Withholdings_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The account holder elects at the time of a specific IRA or other tax-deferred plan distribution to have state income tax withheld.</description>
        <inlineHelpText>The account holder elects at the time of a specific IRA or other tax-deferred plan distribution to have state income tax withheld.</inlineHelpText>
        <label>State Income Withholdings Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Income_Withholdings_Percentage__c</fullName>
        <description>The percentage that the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The percentage that the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</inlineHelpText>
        <label>State Income Withholdings Percentage</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Income_Withholdings__c</fullName>
        <description>The dollar amount which the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The dollar amount which the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</inlineHelpText>
        <label>State Income Withholdings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ten_Pct_Federal_Withholding_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the IRA owner elects to have 10% Federal income tax withheld from the IRA distribution.</description>
        <inlineHelpText>If true the IRA owner elects to have 10% Federal income tax withheld from the IRA distribution.</inlineHelpText>
        <label>10% Federal Withholding Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Traditional_IRA_Distribution_Type__c</fullName>
        <description>Specifies the type of distribution for a Traditional or Simple IRA.</description>
        <inlineHelpText>Specifies the type of distribution for a Traditional or Simple IRA.</inlineHelpText>
        <label>Traditional IRA Distribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Distribution no known exception</fullName>
                </value>
                <value>
                    <fullName>Early Distribution IRS Levy or other exception</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Prohibited Transaction</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Direct Rollover to an employer-sponsored Eligible Retirement Plan</fullName>
                </value>
                <value>
                    <fullName>Qualified Health Savings Account Funding Distribution (QHSAAFD)</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution in year after excess contribution but by my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Correction of Excess Contribution after my tax-filing due date</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of prior tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>Recharacterization of current tax year regular contribution/conversion in the current year</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA Distribution During Two-Year Period</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Transfer to another IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deposit Distribution</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-DIS-{000000}</displayFormat>
        <label>Deposit Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>